# quadruped_wbc

./: .gitignore  README.md  description.md  pyproject.toml
assets/go2/: scene.xml
scripts/: test_wbc.py
src/: wbc.py
