[project]
name = "quadruped_wbc"
version = "0.1.0"
description = "wbc on the unitree go2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "mujoco>=3.8.1",
    "numpy>=2.4.6",
    "osqp>=1.1.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envs", "src"]
